yolo + crnn: 模型合并 & 车牌识别展示效果图 & 正确率统计 & 各类别正确率统计

--- a/.gitignore
+++ b/.gitignore
@@ -6,4 +6,9 @@ ultralytics/model_pretrain
 ocr/crnn/checkpoints
 ocr/crnn/data
 ocr/crnn/run
+crop_results
+detect_dir
+lpdr_results
 yolo11n.pt
+accuracy_by_class.json
+overall_accuracy.txt
